REFACTOR :: setAllowedOrigins(*)